:art: update: enhance footer styles; ensure footer positioning and background color consistency :art: update: adjust cart item layout; improve spacing between product items :art: update: modify About component; change SVG size attribute for better responsiveness :art: update: refactor ProductDetails component; streamline product removal functionality

--- a/src/assets/sass/components/ui/_footer.scss
+++ b/src/assets/sass/components/ui/_footer.scss
@@ -2,6 +2,10 @@
 
 #footer {
 	z-index: 1;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 	background-color: var(--bg_color02);
 
 	li {
