--- a/src/assets/sass/pages/product/_cart.scss
+++ b/src/assets/sass/pages/product/_cart.scss
@@ -11,6 +11,7 @@
 	.product_item {
 		padding: 1rem;
 		display: flex;
+		gap: 1rem;
 
 		img {
 			max-width: 15rem;
